--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-tracktiming (0.9-1) UNRELEASED; urgency=medium
+tracktiming (0.9-2) UNRELEASED; urgency=medium
 
-  * Big update. (Closes: #010001)
+  * Added Second split
 
- -- MAINTAINER <HSV_Timing@dd.id.au>  Tue, 27 Jun 2025 13:24:57 +1000
+ -- MAINTAINER <HSV_Timing@dd.id.au>  Tue, 21 Oct 2025 23:04:00 +1000
 
 tracktiming (0.9-1) UNRELEASED; urgency=medium
 
