--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 tracktiming (0.9-2) UNRELEASED; urgency=medium
 
   * Added Second split
+  * Added event name title to static pages
 
- -- MAINTAINER <HSV_Timing@dd.id.au>  Tue, 21 Oct 2025 23:04:00 +1000
+ -- MAINTAINER <HSV_Timing@dd.id.au>  Tue, 29 Oct 2025 14:04:00 +1000
 
 tracktiming (0.9-1) UNRELEASED; urgency=medium
 
